# MakeVulkan

./: CMakeLists.txt  readme.txt
android_build/: adb.txt  build.gradle  settings.gradle
android_build/examples/E001BasicCube/: CMakeLists.txt  build.gradle
android_build/examples/E001BasicCube/assets/shaders/imgui/: imgui.frag.spv  imgui.vert.spv  shader.frag.spv  shader.vert.spv
android_build/examples/E002Texture/: CMakeLists.txt  build.gradle
android_build/examples/E003DragonLit/: CMakeLists.txt  build.gradle
android_build/examples/E004Mipmap/: CMakeLists.txt  build.gradle
android_build/examples/E005Batch/: CMakeLists.txt  build.gradle
android_build/examples/E006Instancing/: CMakeLists.txt  build.gradle
android_build/examples/E007TextureArray/: CMakeLists.txt  build.gradle
android_build/examples/E008Cubemap/: CMakeLists.txt  build.gradle
android_build/examples/E009InputAttachments/: CMakeLists.txt  build.gradle
android_build/examples/E010SubPasses/: CMakeLists.txt  build.gradle
android_build/examples/E011Offscreen/: CMakeLists.txt  build.gradle  local.properties
android_build/examples/E999Test/: CMakeLists.txt  build.gradle
android_build/examples/startup/: CMakeLists.txt  build.gradle
android_build/examples/test/: CMakeLists.txt  build.gradle
android_build/examples/test/assets/shaders/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.vert.spv  shader.vert.spv.txt
android_build/examples/test/src/main/: AndroidManifest.xml
android_build/examples/triangle/: CMakeLists.txt  build.gradle
android_build/gradle/wrapper/: gradle-wrapper.properties
common/: Common.cpp  Common.h  Env.cpp  Env.h  GLMIncludes.h  GlobalSettings.cpp  GlobalSettings.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Log.h  Main.cpp  MkArray.h  MkVector.h  NonCopyable.h  Platforms.cpp  Platforms.h  Settings.cpp  Settings.h  Tools.cpp  Tools.h
common/containers/: mkArray.h  mkHashMap.h  mkList.h  mkString.h  mkVector.h
data/shaders/: Lit.frag  Lit.vert  compile.bat  shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.vert  shader.vert.spv  shader.vert.spv.txt  simpleColor.frag.spv  simpleColor.frag.spv.txt  simpleColor.vert  simpleColor.vert.spv  simpleColor.vert.spv.txt
data/shaders/E001BasicCube/: Color.frag  Color.vert  Color.vert.spv.txt
data/shaders/E002Texture/: Tex.frag  Tex.vert  _Compile.bat
data/shaders/E003DragonLit/: DragonLit.frag  DragonLit.frag.spv  DragonLit.frag.spv.txt  DragonLit.vert  DragonLit.vert.spv  DragonLit.vert.spv.txt  _Compile.bat
data/shaders/E004Mipmap/: Mip.frag  Mip.frag.spv  Mip.frag.spv.txt  Mip.vert  Mip.vert.spv.txt  _Compile.bat
data/shaders/E005Batch/: Color.vert  Color.vert.spv
data/shaders/E006Instancing/: Instancing.frag.spv  Instancing.frag.spv.txt  Instancing.vert  Instancing.vert.spv  Instancing.vert.spv.txt  _Compile.bat
data/shaders/E007TextureArray/: TextureArray.frag  TextureArray.frag.spv.txt  TextureArray.vert.spv.txt  _Compile.bat
data/shaders/E008Cubemap/: Reflect.frag  Reflect.frag.spv.txt  Reflect.vert  Reflect.vert.spv.txt  Skybox.frag  Skybox.frag.spv.txt  Skybox.vert  (+3 more)
engine/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DeviceProperties.cpp  DeviceProperties.h  Engine.cpp  Engine.h  EngineFwd.h  Example.cpp  Example.h  GPUProfilerMgr.cpp  GPUProfilerMgr.h  GfxBuffer.h  GfxDeviceObjects.h  GpuProgram.cpp  GpuProgram.h  Gui.cpp  Gui.h  Image.cpp  Image.h  Imgui.cpp  Imgui.h  InputManager.cpp  InputManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NamedObject.h  ProfilerManager.cpp  ProfilerManager.h  ProfilerMgr.cpp  ProfilerMgr.h  RenderNode.cpp  RenderNode.h  (+19 more)
examples/E001BasicCube/: E001BasicCube.cpp  E001BasicCube.h
examples/E002Texture/: E002Texture.cpp  E002Texture.h
examples/E003DragonLit/: E003DragonLit.cpp  E003DragonLit.h
examples/E004Mipmap/: E004Mipmap.cpp  E004Mipmap.h
examples/E005Batch/: E005Batch.cpp  E005Batch.h
examples/E006Instancing/: E006Instancing.cpp  E006Instancing.h
examples/E007TextureArray/: E007TextureArray.cpp  E007TextureArray.h
examples/E008Cubemap/: E008Cubemap.cpp  E008Cubemap.h
examples/E009InputAttachments/: E009InputAttachments.cpp  E009InputAttachments.h
examples/E010SubPasses/: E010SubPasses.cpp  E010SubPasses.h
examples/E011Offscreen/: E011Offscreen.cpp  E011Offscreen.h
examples/E999Test/: E999Test.cpp  E999Test.h
examples/startup/: Startup.cpp  Startup.h
examples/test/: Test.cpp  Test.h  Triangle.cpp  Triangle.h  main.cpp
examples/triangle/: Main.cpp  Triangle.cpp  Triangle.h
vulkan/: BufferManager.cpp  BufferManager.h  DescriptorSetManager.cpp  DescriptorSetManager.h  DescriptorSetMgr.cpp  DescriptorSetMgr.h  DescriptorSetTypes.h  DeviceProperties.cpp  DeviceProperties.h  GPUProfilerManager.cpp  GPUProfilerManager.h  GarbageCollector.cpp  GarbageCollector.h  GfxDevice.cpp  GfxDevice.h  GfxTypes.cpp  GfxTypes.h  ImageManager.cpp  ImageManager.h  PipelineManager.cpp  PipelineManager.h  RenderPassManager.cpp  RenderPassManager.h  UniformBufferMgr.cpp  UniformBufferMgr.h  VKBuffer.cpp  VKBuffer.h  VKCommandBuffer.cpp  VKCommandBuffer.h  VKCommandPool.cpp  VKCommandPool.h  VKContex.cpp  VKContex.h  VKDescriptorSet.cpp  VKDescriptorSet.h  VKDevice.cpp  VKDevice.h  VKDeviceProperties.cpp  VKDeviceProperties.h  VKFence.cpp  (+87 more)
vulkan_base/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Model.cpp  Model.h  Tools.cpp  Tools.h  VulkanBase.cpp  VulkanBase.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanFrameBuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSemaphore.h  (+7 more)
(+106 files in other folders)
